Refactor code style: immutable DTOs, builder pattern, stream API
- Convert all DTOs from @Data to @Value + @Builder (immutable, no setters)
- Rewrite all converters to use builder pattern instead of setters
- Replace .collect(Collectors.toList()) with .toList() throughout
- Fix CertificateStatusUpdateForCareResponderImpl: @Component + @WebService → @Service